# notion-cli

./: .gitignore  .npmignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DEPLOY.md  LICENSE  MEMORY.md  PATTERNS.md  README.md  package-lock.json  package.json  progress.md  pyproject.toml  vitest.config.ts
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: notion-db.md  notion-knowledge-base.md  notion-page.md  notion-search.md  notion-shared.md  notion-task-tracker.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: agent-patterns.md  commands.md  getting-started.md  mcp-vs-cli.md
notion/: __main__.py  cli.py  client.py  coerce.py  errors.py  models.py  modes.py  output.py  schema.py
notion/commands/: auth.py  block.py  comment.py  db.py  page.py  search.py  user.py
scripts/: sync-version.js
skills/: README.md
skills/notion-backup-sync/: SKILL.md
skills/notion-capture/: SKILL.md
skills/notion-crm-pipeline/: SKILL.md
skills/notion-db/: SKILL.md
skills/notion-knowledge-base/: SKILL.md
skills/notion-page/: SKILL.md
skills/notion-reporting/: SKILL.md
skills/notion-schema-design/: SKILL.md
skills/notion-search/: SKILL.md
skills/notion-shared/: SKILL.md
src/: cli.ts  client.ts  coerce.ts  config.ts  errors.ts  index.ts  modes.ts  output.ts  schema.ts
src/commands/: db.ts  (+6 more)
tests/: conftest.py  test_add_option.py  test_auth.py  test_batch.py  test_block.py  test_comment.py  test_db_add.py  test_db_query.py  test_db_schema.py  test_modes.py  test_page.py  test_scaffold.py  test_schema.py  test_search.py  test_upsert.py  test_user.py
(+18 files in other folders)
