[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-agent-cli"
version = "0.1.0"
description = "Zero-overhead CLI for Notion API — designed for AI agent subprocess calls"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Henry Reith"}]
requires-python = ">=3.10"
keywords = ["notion", "cli", "agent", "ai", "productivity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
    "platformdirs>=4.0",
]

[project.scripts]
notion = "notion.__main__:main"
notion-agent = "notion.__main__:main"

[project.urls]
Homepage = "https://github.com/henryreith/notion-cli"
Repository = "https://github.com/henryreith/notion-cli"
Issues = "https://github.com/henryreith/notion-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=4.0",
    "build>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["notion"]

[tool.pytest.ini_options]
markers = [
    "integration: requires real Notion API key and test parent page ID",
]
testpaths = ["tests"]
